sign in sign up

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   dotted_border: ^2.0.0+3
   string_to_color: ^2.0.0
   pin_code_fields: ^7.3.0
+  get_storage: ^2.1.1
 
 
 dependency_overrides:
