--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   pin_code_fields: ^7.3.0
   get_storage: ^2.1.1
   intl_phone_field: ^3.1.0
-
+  lottie: ^2.3.0
 
 dependency_overrides:
   modal_bottom_sheet:
