--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   get_storage: ^2.1.1
   intl_phone_field: ^3.1.0
   lottie: ^2.3.0
+  flutter_staggered_grid_view: ^0.4.1
+  google_nav_bar: ^5.0.6
 
 dependency_overrides:
   modal_bottom_sheet:
